...
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:background="@null"
            android:contentDescription="@string/description_sign_out_button"
            android:onClick="signOutButton"
            app:layout_constraintEnd_toEndOf="@id/profile_layout"
            app:layout_constraintTop_toTopOf="@id/profile_layout"
            app:srcCompat="@drawable/profile_icon_sign_out"
            app:tint="@color/DarkGreen" />

        <!-- Friend Icon -->
...
            android:id="@+id/profile_change_username"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="109dp"
            android:background="@null"
            android:contentDescription="@string/description_change_user_button"
            android:onClick="changeUsernameButton"
            app:layout_constraintStart_toEndOf="@id/profile_profile_container"
            app:layout_constraintTop_toTopOf="@id/profile_profile_container"
            app:srcCompat="@drawable/profile_icon_edit_username"
            app:tint="@color/DarkGreen" />

        <!-- Add friend -->
...
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="17dp"
            android:background="@null"
            android:contentDescription="@string/add_friend_button"
            android:onClick="addFriendButton"
            app:layout_constraintBottom_toBottomOf="@id/profile_profile_container"
            app:layout_constraintEnd_toEndOf="@id/profile_profile_container"
            app:layout_constraintTop_toTopOf="@id/profile_profile_container"
            app:srcCompat="@drawable/profile_icon_add" />

        <!-- Remove friend -->
...
