<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addFriendLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="ch.epfl.sdp.peakar.user.profile.ProfileActivity">

    <!-- Toolbar -->
    <include layout="@layout/toolbar"/>

    <!-- Submit friend -->
    <Button
        android:id="@+id/submitFriendButton"
        android:layout_width="300dp"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/ButtonDarkGreen"
        android:text="@string/submit_friend_button"
        android:onClick="submitFriendButton" />


    <EditText
        android:id="@+id/editTextFriend"
        android:autofillHints="username"
        style="@style/ButtonGrey"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:ems="10"
        android:hint="@string/insert_friend_button"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

